Atividade do currículo com bootstrap (incompleto)

--- a/atividades-praticas/bootstrap/pagina.html
+++ b/atividades-praticas/bootstrap/pagina.html
@@ -59,6 +59,20 @@
 
     <!-- FIM CAROUSEL -->
 
+<!-- INICIO SOBRE-->
+<div class="container mt-5 mb-5">
+  <div class="row">
+    <div class="col-12 col-md-6">
+      <img src="https://picsum.photos/600/500?ramdom=7" alt="" class="img-fluid rounded">
+    </div>
+    <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-start">
+      <h2>Sobre nós</h2>
+      <p>Somos uma empresa de tecnologia</p>
+    </div>
+  </div>
+</div>
+<!-- FIM SOBRE-->
+    
     <!-- INICIO SERVIÇOS -->
 
       <div class="container text-center">
@@ -74,8 +88,25 @@
       </div>
 
     <!-- FIM SERVIÇOS -->
-    
+    <!-- INICIO CONTATO -->
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- FIM CONTATO -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
+
 </body>
 </html>
