--- a/exercicios-individuais/js/operadores.html
+++ b/exercicios-individuais/js/operadores.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-
+ <h1>Aperte F12 para ver os resultados</h1>
     <script>
         alert("Abra o console do navegador (F12) para ver os resultados dos exercícios. Clique em Ok para continuar.");
         function exercicio1()
