--- a/exercicios-individuais/js/atividade_orcamento.html
+++ b/exercicios-individuais/js/atividade_orcamento.html
@@ -46,23 +46,23 @@
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item d-flex justify-content-between">
                             <span>Subtotal (Páginas):</span>
-                            <span id="resumo-subtotal">R$ 0,00</span>
+                            <span id="resumo-subtotal"></span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between">
                             <span>Adicional de Design:</span>
-                            <span id="resumo-adicional">R$ 0,00</span>
+                            <span id="resumo-adicional"></span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between text-warning">
                             <span>Taxa de Urgência:</span>
-                            <span id="resumo-urgencia">+ R$ 0,00</span>
+                            <span id="resumo-urgencia"></span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between text-danger">
                             <span>Desconto Aplicado:</span>
-                            <span id="resumo-desconto">- R$ 0,00</span>
+                            <span id="resumo-desconto"></span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between fs-4 fw-bold border-top pt-3">
                             <span>TOTAL:</span>
-                            <span id="resumo-total">R$ 0,00</span>
+                            <span id="resumo-total"></span>
                         </li>
                     </ul>
                 </div>
