--- a/exercicios-individuais/js/cadastro.html
+++ b/exercicios-individuais/js/cadastro.html
@@ -17,6 +17,9 @@
                     <button class="btn btn-primary" id="btn-adicionar"><i class="bi bi-plus-circle"></i> Adicionar Usuário</button>
                 </div>
             </div>
+            <div class="mb-3">
+                <input type="text" id="search-input" class="form-control mt-3" placeholder="Pesquisar Usuários">
+            </div>
             <div class="table-responsive">
                 <table class="table table-striped table-hover">
                     <thead class="table-info">
