--- a/exercicios-individuais/js/cadastro.html
+++ b/exercicios-individuais/js/cadastro.html
@@ -14,6 +14,12 @@
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h1>Lista de Usuários</h1>
                 <div>
+                    <button class="btn btn-danger" id="btn-download"><i class="bi bi-download"></i> Download Json</button>
+                </div>
+                <div>
+                    <button class="btn btn-secondary" id="btn-upload"><i class="bi bi-upload"></i> Upload Json</button>
+                </div>
+                <div>
                     <button class="btn btn-primary" id="btn-adicionar"><i class="bi bi-plus-circle"></i> Adicionar Usuário</button>
                 </div>
             </div>
